opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/protocol_version_header"
bug-reports: "https://github.com/janestreet/protocol_version_header/issues"
dev-repo: "git+https://github.com/janestreet/protocol_version_header.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "protocol_version_header" "--root" "." "-j" jobs "@install"]
]
depends: [
  "core_kernel"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_driver"
  "ppx_jane"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Protocol versioning

This library offers a lightweight way for applications protocols to
version themselves. The more protocols that add themselves to
[Known_protocol], the nicer error messages we will get when connecting
to a service while using the wrong protocol.
"
